# slack.nvim

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
lua/slack/: init.lua
lua/slack/client/: init.lua  types.lua
lua/slack/client/rust/: init.lua
slack-client/: Cargo.toml
slack-client/src/: client.rs  lib.rs  log.rs  store.rs  token.rs
slack-client/src/ecs/: components.rs  world.rs
slack-client/src/ecs/systems/: auth.rs  conversations.rs
slack-client/src/slack/: api.rs  mod.rs  token.rs  types.rs
slack-client/src/storage/: keyring.rs
slack-telemetry/: Cargo.toml
slack-telemetry/src/: lib.rs
